crates/pg_syntax/tests/snapshots/postgres_regress/regproc@13.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT to_regclass('pg_class');"
---
SelectStmt@0..31
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..29
    FuncCall@7..29
      Ident@7..18 "to_regclass"
      Ascii40@18..19 "("
      AConst@19..29
        Sconst@19..29 "'pg_class'"
  Ascii41@29..30 ")"
  Ascii59@30..31 ";"

