crates/pg_syntax/tests/snapshots/postgres_regress/regproc@17.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT regoperator('pg_catalog.+(int4,int4)');"
---
SelectStmt@0..46
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..44
    FuncCall@7..44
      Ident@7..18 "regoperator"
      Ascii40@18..19 "("
      AConst@19..44
        Sconst@19..44 "'pg_catalog.+(int4,in ..."
  Ascii41@44..45 ")"
  Ascii59@45..46 ";"

