crates/pg_syntax/tests/snapshots/postgres_regress/regproc@19.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT regprocedure('pg_catalog.abs(numeric)');"
---
SelectStmt@0..47
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..45
    FuncCall@7..45
      Ident@7..19 "regprocedure"
      Ascii40@19..20 "("
      AConst@20..45
        Sconst@20..45 "'pg_catalog.abs(numer ..."
  Ascii41@45..46 ")"
  Ascii59@46..47 ";"

